[tool.poetry]
name = "shell_tools"
version = "0.1.0"
description = "environment for python-based shell tools"
authors = ["Joseph Goldstone <jgoldstone@arri.com>"]
maintainers = ["Joseph Goldstone <jgoldstone@arri.com>"]
license = "MIT"
readme = "README.md"
keywords = [
    "Flaskpoetry",
]

[tool.poetry.dependencies]
python = "^3.9"
fileseq = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[tool.poetry.urls]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

