[project]
name = "shell_tools"
version = "0.2.0"
description = "environment for python-based shell tools"
authors = [{ name= "Joseph Goldstone", email =  "joseph.goldstone@mac.com" }]
maintainers = [{ name = "Joseph Goldstone", email = "joseph.goldstone@mac.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = [
    "pipeline",
    "content management", "CMS"
]
dependencies = [
    python = "^3.9"
    fileseq = "*"
]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"
