[project]
name = "shell_tools"
version = "0.2.0"
requires-python = ">=3.13"
description = "environment for python-based shell tools"
license = { text = "MIT" }
authors = [{ name= "Joseph Goldstone", email =  "joseph.goldstone@mac.com" }]
maintainers = [{ name = "Joseph Goldstone", email = "joseph.goldstone@mac.com" }]
readme = "README.md"
keywords = [
    "pipeline",
    "content management",
    "CMS"
]

dependencies = [
    "fileseq >= 2.1.2"
]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"
